[tool.poetry]
name = "interactive-chat-bot"
version = "0.1.0"
description = ""
authors = ["Dan Lopatenco <danlopatenco@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
python-dotenv = "^1.0.1"
langchain = "^0.3.9"
langchain-openai = "^0.2.10"
langgraph = "^0.2.53"
httpx = "^0.28.0"
langchain-community = "^0.3.9"
streamlit = "^1.40.2"
langsmith = "^0.1.147"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
